--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -356,11 +356,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(404, 13) (102, 13)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "# Your code here :\n",
+    " \n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Load data\n",
+    "column_names = [\n",
+    "    'CRIM', 'ZN', 'INDUS', 'CHAS', 'NOX', 'RM', 'AGE', 'DIS', \n",
+    "    'RAD', 'TAX', 'PTRATIO', 'B', 'LSTAT', 'MEDV'\n",
+    "]\n",
+    "data = pd.read_csv(\n",
+    "    r'C:\\Users\\gulme\\Desktop\\aifirstclass\\lab-supervised-learning-model-evaluation-en\\your-code\\housing.csv',\n",
+    "    header=None,\n",
+    "    delimiter=r\"\\s+\",\n",
+    "    names=column_names\n",
+    ")\n",
+    "\n",
+    "# Split data into features (X) and target (y)\n",
+    "X = data.drop('MEDV', axis=1)\n",
+    "y = data['MEDV']\n",
+    "\n",
+    "# Split into training (80%) and test (20%) sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42\n",
+    ")\n",
+    "\n",
+    "# Confirm split sizes\n",
+    "print(X_train.shape, X_test.shape)\n"
    ]
   },
   {
@@ -372,11 +407,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train predictions sample: [10.96952405 19.41196567 23.06419602 12.1470648  18.3738116 ]\n",
+      "Test predictions sample: [28.99672362 36.02556534 14.81694405 25.03197915 18.76987992]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "# Your code here :\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "# Initialize model\n",
+    "model = LinearRegression()\n",
+    "\n",
+    "# Train model\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Generate predictions\n",
+    "y_train_pred = model.predict(X_train)\n",
+    "y_test_pred = model.predict(X_test)\n",
+    "\n",
+    "# Display sample predictions\n",
+    "print(\"Train predictions sample:\", y_train_pred[:5])\n",
+    "print(\"Test predictions sample:\", y_test_pred[:5])\n"
    ]
   },
   {
@@ -388,11 +447,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R-squared (Train): 0.7508856358979673\n",
+      "R-squared (Test): 0.6687594935356317\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "# Your code here :\n",
+    "from sklearn.metrics import r2_score\n",
+    "\n",
+    "# Compute R-squared for training and testing sets\n",
+    "r2_train = r2_score(y_train, y_train_pred)\n",
+    "r2_test = r2_score(y_test, y_test_pred)\n",
+    "\n",
+    "print(\"R-squared (Train):\", r2_train)\n",
+    "print(\"R-squared (Test):\", r2_test)\n"
    ]
   },
   {
@@ -404,11 +480,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Squared Error (Train): 21.641412753226312\n",
+      "Mean Squared Error (Test): 24.291119474973538\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "# Your code here :\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "# Compute mean squared error\n",
+    "mse_train = mean_squared_error(y_train, y_train_pred)\n",
+    "mse_test = mean_squared_error(y_test, y_test_pred)\n",
+    "\n",
+    "print(\"Mean Squared Error (Train):\", mse_train)\n",
+    "print(\"Mean Squared Error (Test):\", mse_test)\n"
    ]
   },
   {
@@ -420,11 +513,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean Absolute Error (Train): 3.3147716267832252\n",
+      "Mean Absolute Error (Test): 3.1890919658878416\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "# Your code here :\n",
+    "from sklearn.metrics import mean_absolute_error\n",
+    "\n",
+    "# Compute mean absolute error\n",
+    "mae_train = mean_absolute_error(y_train, y_train_pred)\n",
+    "mae_test = mean_absolute_error(y_test, y_test_pred)\n",
+    "\n",
+    "print(\"Mean Absolute Error (Train):\", mae_train)\n",
+    "print(\"Mean Absolute Error (Test):\", mae_test)\n"
    ]
   },
   {
@@ -436,17 +546,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['sepal length (cm)', 'sepal width (cm)', 'petal length (cm)', 'petal width (cm)']\n",
+      "['setosa' 'versicolor' 'virginica']\n",
+      "(150, 4)\n",
+      "(150,)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.datasets import load_iris\n",
-    "data = load_iris()"
+    "data = load_iris()\n",
+    "\n",
+    "print(data.feature_names)\n",
+    "print(data.target_names)\n",
+    "print(data.data.shape)\n",
+    "print(data.target.shape)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -500,26 +626,22 @@
       "type of iris plant.  One class is linearly separable from the other 2; the\n",
       "latter are NOT linearly separable from each other.\n",
       "\n",
-      "|details-start|\n",
-      "**References**\n",
-      "|details-split|\n",
+      ".. dropdown:: References\n",
       "\n",
-      "- Fisher, R.A. \"The use of multiple measurements in taxonomic problems\"\n",
-      "  Annual Eugenics, 7, Part II, 179-188 (1936); also in \"Contributions to\n",
-      "  Mathematical Statistics\" (John Wiley, NY, 1950).\n",
-      "- Duda, R.O., & Hart, P.E. (1973) Pattern Classification and Scene Analysis.\n",
-      "  (Q327.D83) John Wiley & Sons.  ISBN 0-471-22361-1.  See page 218.\n",
-      "- Dasarathy, B.V. (1980) \"Nosing Around the Neighborhood: A New System\n",
-      "  Structure and Classification Rule for Recognition in Partially Exposed\n",
-      "  Environments\".  IEEE Transactions on Pattern Analysis and Machine\n",
-      "  Intelligence, Vol. PAMI-2, No. 1, 67-71.\n",
-      "- Gates, G.W. (1972) \"The Reduced Nearest Neighbor Rule\".  IEEE Transactions\n",
-      "  on Information Theory, May 1972, 431-433.\n",
-      "- See also: 1988 MLC Proceedings, 54-64.  Cheeseman et al\"s AUTOCLASS II\n",
-      "  conceptual clustering system finds 3 classes in the data.\n",
-      "- Many, many more ...\n",
-      "\n",
-      "|details-end|\n",
+      "  - Fisher, R.A. \"The use of multiple measurements in taxonomic problems\"\n",
+      "    Annual Eugenics, 7, Part II, 179-188 (1936); also in \"Contributions to\n",
+      "    Mathematical Statistics\" (John Wiley, NY, 1950).\n",
+      "  - Duda, R.O., & Hart, P.E. (1973) Pattern Classification and Scene Analysis.\n",
+      "    (Q327.D83) John Wiley & Sons.  ISBN 0-471-22361-1.  See page 218.\n",
+      "  - Dasarathy, B.V. (1980) \"Nosing Around the Neighborhood: A New System\n",
+      "    Structure and Classification Rule for Recognition in Partially Exposed\n",
+      "    Environments\".  IEEE Transactions on Pattern Analysis and Machine\n",
+      "    Intelligence, Vol. PAMI-2, No. 1, 67-71.\n",
+      "  - Gates, G.W. (1972) \"The Reduced Nearest Neighbor Rule\".  IEEE Transactions\n",
+      "    on Information Theory, May 1972, 431-433.\n",
+      "  - See also: 1988 MLC Proceedings, 54-64.  Cheeseman et al\"s AUTOCLASS II\n",
+      "    conceptual clustering system finds 3 classes in the data.\n",
+      "  - Many, many more ...\n",
       "\n"
      ]
     }
@@ -530,11 +652,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['sepal length (cm)',\n",
+       " 'sepal width (cm)',\n",
+       " 'petal length (cm)',\n",
+       " 'petal width (cm)']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "column_names = data.feature_names"
+    "column_names = data.feature_names\n",
+    "\n",
+    "['sepal length (cm)', 'sepal width (cm)', 'petal length (cm)', 'petal width (cm)']\n"
    ]
   },
   {
@@ -747,11 +885,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(120, 4) (30, 4)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "import pandas as pd\n",
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Load data\n",
+    "data = load_iris()\n",
+    "column_names = data.feature_names\n",
+    "df = pd.DataFrame(data['data'], columns=column_names)\n",
+    "target = pd.DataFrame(data.target)\n",
+    "\n",
+    "# Split data\n",
+    "X = df\n",
+    "y = target[0]\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42, stratify=y\n",
+    ")\n",
+    "\n",
+    "print(X_train.shape, X_test.shape)\n"
    ]
   },
   {
@@ -763,11 +927,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train predictions sample: [0 1 1 0 1]\n",
+      "Test predictions sample: [0 2 1 1 0]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "# Your code here :\n",
+    "\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "# Initialize and train model\n",
+    "model = LogisticRegression(max_iter=200)\n",
+    "model.fit(X_train, y_train)\n",
+    "\n",
+    "# Generate predictions\n",
+    "y_train_pred = model.predict(X_train)\n",
+    "y_test_pred = model.predict(X_test)\n",
+    "\n",
+    "# Display sample predictions\n",
+    "print(\"Train predictions sample:\", y_train_pred[:5])\n",
+    "print(\"Test predictions sample:\", y_test_pred[:5])\n"
    ]
   },
   {
@@ -779,11 +966,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy (Train): 0.975\n",
+      "Accuracy (Test): 0.9666666666666667\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "# Your code here : \n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Compute accuracy\n",
+    "acc_train = accuracy_score(y_train, y_train_pred)\n",
+    "acc_test = accuracy_score(y_test, y_test_pred)\n",
+    "\n",
+    "print(\"Accuracy (Train):\", acc_train)\n",
+    "print(\"Accuracy (Test):\", acc_test)\n"
    ]
   },
   {
@@ -795,11 +999,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Balanced Accuracy (Train): 0.975\n",
+      "Balanced Accuracy (Test): 0.9666666666666667\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "# Your code here :\n",
+    "\n",
+    "from sklearn.metrics import balanced_accuracy_score\n",
+    "\n",
+    "# Compute balanced accuracy\n",
+    "bal_acc_train = balanced_accuracy_score(y_train, y_train_pred)\n",
+    "bal_acc_test = balanced_accuracy_score(y_test, y_test_pred)\n",
+    "\n",
+    "print(\"Balanced Accuracy (Train):\", bal_acc_train)\n",
+    "print(\"Balanced Accuracy (Test):\", bal_acc_test)\n"
    ]
   },
   {
@@ -811,11 +1033,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Precision (Train): 0.9751928288513655\n",
+      "Precision (Test): 0.9696969696969697\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "# Your code here :\n",
+    "from sklearn.metrics import precision_score\n",
+    "\n",
+    "# Compute precision (macro average for multi-class)\n",
+    "prec_train = precision_score(y_train, y_train_pred, average='macro')\n",
+    "prec_test = precision_score(y_test, y_test_pred, average='macro')\n",
+    "\n",
+    "print(\"Precision (Train):\", prec_train)\n",
+    "print(\"Precision (Test):\", prec_test)\n"
    ]
   },
   {
@@ -827,11 +1066,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall (Train): 0.975\n",
+      "Recall (Test): 0.9666666666666667\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "# Your code here : \n",
+    "\n",
+    "from sklearn.metrics import recall_score\n",
+    "\n",
+    "# Compute recall (macro average for multi-class)\n",
+    "recall_train = recall_score(y_train, y_train_pred, average='macro')\n",
+    "recall_test = recall_score(y_test, y_test_pred, average='macro')\n",
+    "\n",
+    "print(\"Recall (Train):\", recall_train)\n",
+    "print(\"Recall (Test):\", recall_test)\n"
    ]
   },
   {
@@ -843,11 +1100,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1 Score (Train): 0.974996093139553\n",
+      "F1 Score (Test): 0.9665831244778612\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "# Your code here :\n",
+    "\n",
+    "from sklearn.metrics import f1_score\n",
+    "\n",
+    "# Compute F1 score (macro average for multi-class)\n",
+    "f1_train = f1_score(y_train, y_train_pred, average='macro')\n",
+    "f1_test = f1_score(y_test, y_test_pred, average='macro')\n",
+    "\n",
+    "print(\"F1 Score (Train):\", f1_train)\n",
+    "print(\"F1 Score (Test):\", f1_test)\n"
    ]
   },
   {
@@ -859,11 +1134,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Confusion Matrix (Train):\n",
+      " [[40  0  0]\n",
+      " [ 0 38  2]\n",
+      " [ 0  1 39]]\n",
+      "\n",
+      "Confusion Matrix (Test):\n",
+      " [[10  0  0]\n",
+      " [ 0  9  1]\n",
+      " [ 0  0 10]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Your code here :"
+    "# Your code here :\n",
+    "\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "\n",
+    "# Generate confusion matrices\n",
+    "cm_train = confusion_matrix(y_train, y_train_pred)\n",
+    "cm_test = confusion_matrix(y_test, y_test_pred)\n",
+    "\n",
+    "print(\"Confusion Matrix (Train):\\n\", cm_train)\n",
+    "print(\"\\nConfusion Matrix (Test):\\n\", cm_test)\n"
    ]
   },
   {
@@ -875,17 +1175,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linear: R2=0.950, MSE=0.033, MAE=0.033\n",
+      "DecisionTree: R2=0.900, MSE=0.067, MAE=0.067\n",
+      "RandomForest: R2=0.931, MSE=0.046, MAE=0.069\n",
+      "SVR: R2=0.933, MSE=0.044, MAE=0.158\n"
+     ]
+    }
+   ],
    "source": [
-    "# Have fun here !"
+    "# Have fun here !\n",
+    "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.svm import SVR\n",
+    "from sklearn.metrics import r2_score, mean_squared_error, mean_absolute_error\n",
+    "\n",
+    "models = {\n",
+    "    \"Linear\": model,  # from earlier\n",
+    "    \"DecisionTree\": DecisionTreeRegressor(random_state=42),\n",
+    "    \"RandomForest\": RandomForestRegressor(random_state=42),\n",
+    "    \"SVR\": SVR()\n",
+    "}\n",
+    "\n",
+    "for name, m in models.items():\n",
+    "    m.fit(X_train, y_train)\n",
+    "    y_pred = m.predict(X_test)\n",
+    "    print(f\"{name}: R2={r2_score(y_test, y_pred):.3f}, \"\n",
+    "          f\"MSE={mean_squared_error(y_test, y_pred):.3f}, \"\n",
+    "          f\"MAE={mean_absolute_error(y_test, y_pred):.3f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Logistic: Accuracy=0.967\n",
+      "DecisionTree: Accuracy=0.933\n",
+      "RandomForest: Accuracy=0.900\n",
+      "SVM: Accuracy=0.967\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "models = {\n",
+    "    \"Logistic\": model,  # from earlier\n",
+    "    \"DecisionTree\": DecisionTreeClassifier(random_state=42),\n",
+    "    \"RandomForest\": RandomForestClassifier(random_state=42),\n",
+    "    \"SVM\": SVC()\n",
+    "}\n",
+    "\n",
+    "for name, m in models.items():\n",
+    "    m.fit(X_train, y_train)\n",
+    "    y_pred = m.predict(X_test)\n",
+    "    print(f\"{name}: Accuracy={accuracy_score(y_test, y_pred):.3f}\")\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -899,7 +1263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
